# AI-Agents-Orchestration

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
experiments/configs/: default_config.json
experiments/prompts/: benchmark_prompts.txt
reports/: NEXT_PROMPT.md  PROJECT_STATE.md  REQUIREMENTS_MATRIX.md  notes.md
results/processed/: airllm_compatibility_summary.md  baseline_stress_summary.md  baseline_warmup_summary.md  economic_analysis.json  environment_summary.md  hardware_summary.md  model_selection.md  quality_scores.json  quant_q4_download_failure_summary.md  summary_table.csv
results/raw/: airllm_compatibility.json  airllm_gpu_metrics.json  baseline_stress_failure.json  baseline_warmup_metrics.json  baseline_warmup_streaming_metrics.json  environment_setup.json  extension_prompt_scaling.json  hardware_profile.json  model_selection.json  quant_q4_download_failure.json  quant_q4_k_m_metrics.json  quant_q4_k_m_streaming_metrics.json  quant_q8_0_metrics.json
src/: benchmark_common.py  economic_analysis.py  extension_prompt_scaling.py  hardware_probe.py  model_selection.py  plot_results.py  quality_eval.py  run_airllm.py  run_baseline.py  run_baseline_streaming.py  run_quantized.py  save_environment_info.py
